--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -31,7 +31,7 @@
             </div>
         </li>
     </ul>
-    <h5 style="display:inline">Due Today</h5> <span style="display:inline" id="count-overdue"
+    <h5 style="display:inline">Due Today</h5> <span style="display:inline" id="count-due-today"
         class="bg-gray-200 text-black px-3 py-1 rounded font-medium mr-2 mb-2">2</span>
     <ul class="list-none">
         <li class="Todo-Item">
@@ -62,7 +62,7 @@
             </div>
         </li>
     </ul>
-    <h5 style="display:inline">Due Later</h5> <span style="display:inline" id="count-overdue"
+    <h5 style="display:inline">Due Later</h5> <span style="display:inline" id="count-due-later"
         class="bg-gray-200 text-black px-3 py-1 rounded font-medium mr-2 mb-2">2</span>
     <ul class="list-none">
         <li class="Todo-Item">
